Fix relative routes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <h1>
                 <a href="https://www.milanuncios.es">
-                    <img src="/logo.png" alt="Milanuncios">
+                    <img src="logo.png" alt="Milanuncios">
                 </a>
             </h1>
         </header>
@@ -28,7 +28,7 @@
                 <p>Section 3 Content...</p>
             </dd>
             <dt id="4" class="sb-Accordion-sectionTitle" data-js-component="AccordionSectionTitle">Section XHR</dt>
-            <dd class="sb-Accordion-sectionContent" data-js-component="AccordionAjaxContent" data-js-url="/content.html"></dd>
+            <dd class="sb-Accordion-sectionContent" data-js-component="AccordionAjaxContent" data-js-url="content.html"></dd>
         </dl>
     </main>
 <script type="text/javascript" src="main.js"></script></body>
